refactor(excel): 将 ExcelTemplateRender 和 SheetRender 转换为 record 类
- 移除了 Lombok 的 @Getter 注解并使用 Java 14 record 特性简化类定义
- 更新了 ExcelTemplateRenderTests 中对 filepath 字段的访问方式
- 将 MapFormatter 类也转换为 record 形式以保持一致性
- 修改 SpringExpressionRowDataFormatter 中的 Collectors.toList() 为 toList()
- 简化了代码结构，提高了可读性和维护性